Изменено название проекта

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Liga-A-accelerator-template",
+  "name": "fitness-first-project",
   "version": "2.0.0",
   "type": "module",
-  "description": "Стартовый шаблон сборки Лиги А",
+  "description": "Проект страница фитнес центра в городе Омск",
   "browserslist": [
     "last 3 versions",
     "IE 11",
