--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "gulp-csso": "4.0.1",
     "gulp-group-css-media-queries": "1.2.2",
     "gulp-imagemin": "7.1.0",
-    "gulp-postcss": "9.0.1",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "2.0.0",
     "gulp-sass": "5.1.0",
     "gulp-sourcemaps": "3.0.0",
@@ -51,6 +51,7 @@
     "imagemin-mozjpeg": "10.0.0",
     "imagemin-pngquant": "9.0.2",
     "imagemin-svgo": "10.0.1",
+    "postcss": "^8.4.31",
     "postcss-scss": "4.0.6",
     "sass": "1.53.0",
     "stylelint": "^14.16.1",
